Started the song reproduction

--- a/DAN_L_Kristina_Garcia_Francisco/DAN_L_Kristina_Garcia_Francisco.csproj
+++ b/DAN_L_Kristina_Garcia_Francisco/DAN_L_Kristina_Garcia_Francisco.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>AudioDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Model\LoggedUser.cs" />
+    <Compile Include="Model\ReadWriteFile.cs" />
     <Compile Include="Model\Song.cs" />
     <Compile Include="Model\tblSong.cs">
       <DependentUpon>AudioDB.tt</DependentUpon>
