Adjusted the connection string

--- a/DAN_L_Kristina_Garcia_Francisco/App.config
+++ b/DAN_L_Kristina_Garcia_Francisco/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="AudioDBEntities" connectionString="metadata=res://*/Model.AudioDB.csdl|res://*/Model.AudioDB.ssdl|res://*/Model.AudioDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=AudioDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AudioDBEntities" connectionString="metadata=res://*/Model.AudioDB.csdl|res://*/Model.AudioDB.ssdl|res://*/Model.AudioDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=AudioDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
